# neuq_racecar_local_computer

./: ...  .ycm_extra_conf.py  README.md  sss_2019-05-21-22-44-48.bag
src/art_driver/: CMakeLists.txt  package.xml
src/art_driver/src/: art_racecar.cpp  cmd_vel_to_ackermann_drive.py
src/art_racecar/: CMakeLists.txt  art_rviz.sh  package.xml  ssh.sh
src/art_racecar/launch/: Run_car.launch  Run_gmapping.launch  amcl_nav.launch  car.launch  ls01g_lidar.launch  t1.launch  t2.launch  t3.launch  t3_teb.launch  t4_rsband.launch  t4_teb&fuzzy_control.launch  test1_RunCar_Gmapping.launch  test2_RunCar_Amcl.launch  test2_RunCar_Nav.launch  test3_odomtest.launch
src/art_racecar/launch/includes/: amcl.launch.xml  art_car_tf.launch.xml  rf2o.launch.xml
src/art_racecar/map/: 3F.yaml  5F.yaml  8F.yaml  8f.yaml  map4.yaml  mymap.xcf  mymap.yaml  test521.yaml
src/art_racecar/param/: .ekf_params.yaml.swp  base_global_planner_params.yaml  costmap_common_params.yaml  dwa_local_planner_params.yaml  ekf_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml  move_base_params.yaml  teb_local_planner_params.yaml  ukf_params.yaml
src/art_racecar/param/teb_param_lino/: base_local_planner_ackermann_params.yaml  local_costmap_params.yaml  move_base_params.yaml
src/art_racecar/param/teb_param_ori/: costmap_conversion_params.yaml
src/art_racecar/rviz/: amcl.rviz  gmapping.rviz
src/art_racecar/src/: L1_controller_v2.cpp  L1_controller_v3.cpp  Teb_controller.cpp  art_car_controller.cpp  racecar_teleop.py
src/ecoder/: CMakeLists.txt  package.xml
src/ecoder/launch/: ecoder.launch
src/ecoder/src/: ecoder.cc  ecoder.cc.cpp  odom.cpp
src/ls01g/rviz/: kobuki_rviz_viewer.rviz
src/m_costmap_2d/: CMakeLists.txt  costmap_plugins.xml  package.xml
src/m_costmap_2d/include/costmap_2d/: m_obstacle_layer.h
src/m_costmap_2d/plugins/: m_obstacle_layer.cpp
src/m_move_base/: CMakeLists.txt  package.xml
src/m_move_base/src/: move_base.cpp
src/m_obstacle_layer/: CMakeLists.txt  costmap_pugins.xml  package.xml
src/m_obstacle_layer/include/m_obstacle_layer/: m_obstacle_layer.h
src/m_obstacle_layer/src/: costmap_math.cpp  m_obstacle_layer.cpp
src/navigation_tutorials/roomba_stage/params/: global_costmap_params.yaml  local_costmap_params_2.yaml
src/rsband_local_planner/: CMakeLists.txt  package.xml
src/rsband_local_planner/cfg/: RSBandPlanner.cfg  path_tracking_controller_fuzzy_rules.yaml
src/rsband_local_planner/include/rsband_local_planner/: auto_correct.h  fuzzy_ptc.h  neuq_controller.h  pose_se2.h  rsband_local_planner_ros.h
src/rsband_local_planner/src/: auto_correct.cpp  fuzzy_ptc.cpp  neuq_controller.cpp  publish_point.cpp  reeds_shepp_planner.cpp  rsband_local_planner_ros.cpp
src/simple_layers/: CMakeLists.txt  package.xml
src/simple_layers/include/simple_layers/: simple_layer.h
src/simple_layers/src/: simple_layer.cpp
